--- a/main/mobila.css
+++ b/main/mobila.css
@@ -1,41 +1,62 @@
-@media screen and (min-width: 800px) {
-  #main-aside-wrapper {
-    flex-direction: row;
-  }
+@media (min-width: 280px) and (max-width: 426px){
+    .osnova {
+        display: flex;
+        flex: 1 1 auto;
+        flex-direction: column;
+    }
+    .osnova, nav {
+        font-size: 35px;
+    }
+    nav {
+        padding: 0 0 0;
+    }
+    header {
+        width: 960px;
+        font-size: 50px;
+    }
+    .shapka img {
+        width: 30vw;
+        height: 30vw;
+    }
+    footer {
+        width: 960px;
+    }
+    #tandf{
+        display: flex;
+        flex-direction: column;
+    }
+    .table {
+        order: 2;
+    }
+    .form{
+        order: 1;
+    }
+    .navigation ul li{
+        display: flex;
+    }
+    .navigation nav ul {
+        display: flex;
+        flex-direction: column; 
+        align-items: left;
+        justify-content: left;
+    }
 }
-#main-aside-wrapper {
-  flex-direction: row;
-  display: flex;
-}
-#main-aside-wrapper main, #main-aside-wrapper aside {
-  background-color: #ddd;
-  margin: 10px;
-  padding: 10px;
-}
-#main-aside-wrapper aside {
-  flex: 1;
-  order: 1;
-}
-#main-aside-wrapper main {
-  flex: 3;
-  order: 2;
-}
-#main-aside-wrapper {
-  display: flex;
-  flex-direction: column;
-}
-#main-aside-wrapper main, #main-aside-wrapper aside {
-  background-color: #ddd;
-  margin: 10px;
-  padding: 10px;
-}
-#main-aside-wrapper aside {
-  flex: 1;
-  order: 1;
-}
-#main-aside-wrapper main {
-  flex: 3;
-  order: 2;
+@media (min-width: 1000px){
+    .navigation ul li{
+        display: flex;
+    }
+    .navigation nav ul {
+        display: flex;
+        flex-direction: row; 
+        align-items: center;
+        justify-content: center;
+    }
+    nav{
+        padding: 0px 30px 5px;
+    }
+    header {
+        font-size: 50px;
+    }
 }
 header {
     height: 150px;
@@ -65,7 +86,7 @@ header {
     height: 200px;
 }
 .navigation {
-    background-color: rgb(192, 192, 192);
+    background-color: rgb(128, 128, 128);
     height: 75px;
     width: 960px;
     margin-left: auto;
@@ -95,7 +116,7 @@ nav{
 body {
     font-family: Courier, monospace;
     font-size: 20px;
-    color: rgb(255, 250, 250);
+    color: rgb(#FFF);
     background-image: url(fon.jpg);
     background-attachment: fixed;
     font-weight: bold;
@@ -104,7 +125,7 @@ body {
 .web1 {
     width: 960px;
     background-color: rgb(112, 128, 144);
-    color: rgb(255, 250, 250);
+    color: rgb(#FFF);
     margin: 20px auto;
     padding: 0px 5px;
     border-width: thick;
@@ -120,7 +141,7 @@ body {
     width: 960px;
     margin-left: auto;
     margin-right: auto;
-    background-color: rgb(192, 192, 192);
+    background-color: rgb(255, 250, 250);
     padding: 0px 5px 5px;
     border-width: thick;
     border-style: double;
@@ -133,7 +154,7 @@ body {
     margin-right: auto;
     margin-bottom: 30px;
     margin-top: 30px;
-    background-color: rgb(192, 192, 192);
+    background-color: rgb(255, 250, 250);
     padding: 0px 5px 5px;
     border-width: thick;
     border-style: double;
@@ -146,7 +167,7 @@ footer {
     margin-right: auto;
     margin-bottom: 30px;
     margin-top: 30px;
-    background-color: rgb(192, 192, 192);
+    background-color: rgb(255, 250, 250);
     padding: 0px 5px 5px;
     border-width: thick;
     border-style: double;
