--- a/main/mobila.css
+++ b/main/mobila.css
@@ -58,60 +58,38 @@
         font-size: 50px;
     }
 }
+
 header {
     height: 150px;
-    background-color: rgb(192, 192, 192);
-    border-width: thick;
-    border-style: double;
-    border-color: grey;
 }
-.shapka {
-    width: 100%;
+.shapka { 
     height: 150px;
     max-width: 960px;
     display: flex;
     flex-direction: row;
     align-items: center;
     margin: 0px auto;
+    
 }
 .shapka p {
     font-family: Courier, monospace;
     font-weight: bold;
     color: white;
-    font-size: 50px;
     letter-spacing: 4px;
 }
-.shapka img {
-    width: 200px;
-    height: 200px;
-}
+
 .navigation {
-    background-color: rgb(128, 128, 128);
-    height: 75px;
-    width: 960px;
-    margin-left: auto;
-    margin-right: auto;
     margin-top: 30px;
     margin-bottom: 30px;
-    border-width: thick;
-    border-style: double;
-    border-color: grey;
+    padding: 0 5px;
 }
-nav{
-    padding: 0px 30px 5px;
-}
+
 .navigation ul li {
-    display: block;
     padding: 0px 50px 5px;
-    font-size: 35px;
+    font-size: 40px;
 }
 .navigation nav ul {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
     list-style: none;
-
 }
 body {
     font-family: Courier, monospace;
@@ -121,64 +99,47 @@ body {
     background-attachment: fixed;
     font-weight: bold;
 }
-
 .web1 {
-    width: 960px;
-    background-color: rgb(112, 128, 144);
+    width: 955px;
     color: rgb(#FFF);
     margin: 20px auto;
     padding: 0px 5px;
-    border-width: thick;
-    border-style: double;
-    border-color: grey;
-    border-image: initial;
 }
 .web1 img{
     width: 100px;
     height: 100px;
 }
 .table {
-    width: 960px;
-    margin-left: auto;
-    margin-right: auto;
-    background-color: rgb(255, 250, 250);
     padding: 0px 5px 5px;
-    border-width: thick;
-    border-style: double;
-    border-color: grey;
-    border-image: initial;
 }
 .form {
-    width: 960px;
-    margin-left: auto;
-    margin-right: auto;
     margin-bottom: 30px;
     margin-top: 30px;
-    background-color: rgb(255, 250, 250);
     padding: 0px 5px 5px;
-    border-width: thick;
-    border-style: double;
-    border-color: grey;
-    border-image: initial;
 }
 footer {
-    width: 960px;
-    margin-left: auto;
-    margin-right: auto;
     margin-bottom: 30px;
     margin-top: 30px;
-    background-color: rgb(255, 250, 250);
     padding: 0px 5px 5px;
-    border-width: thick;
-    border-style: double;
-    border-color: grey;
-    border-image: initial;
+}
+.form, .table, .navigation {
+    width: 955px;
+    margin-left: auto;
+    margin-right: auto;
 }
 a{
     text-decoration: none;
     color: rgb(92, 85, 85);
 }
-th, .nech td{
+
+.nech td, th{
     color: white;
     background-color: grey;
+}
+header, .navigation, .web1, .table, .form, footer{
+    background-color: rgb(255, 250, 250);
+    border-width: thick;
+    border-style: double;
+    border-color: grey;
+    border-image: initial;
 }
